<resources>
    <string name="app_name">PrototypeShoppingList</string>
    <string name="option_create_list">リストを新規に作成</string>
    <string name="option_edit_list">リスト名を変更</string>
    <string name="option_delete_list">リストを削除</string>
    <string name="option_share_list">リストを共有</string>
    <string name="title_to_buy">購入予定</string>
    <string name="title_bought">購入済</string>
    <string name="title_update">商品情報を更新</string>
    <string name="title_create">商品情報を追加</string>
    <string name="item_name">商品名</string>
    <string name="amount">数量</string>
    <string name="unit_jp">¥</string>
    <string name="price">単価</string>
    <string name="total_price">合計金額</string>
    <string name="place">売場</string>
    <string name="comment">コメント</string>
    <string name="delete">項目を削除</string>
    <string name="copy">項目をコピー</string>
    <string name="move">項目を移動</string>
    <string name="reply_update">内容を更新</string>
    <string name="reply_create">項目を作る</string>
    <string name="hint">%1$sを入力してください</string>
    <string name="empty">買い物リストが何も登録されていません</string>
    <string name="attention">確認</string>
    <string name="alert_create_list">作りたいリスト名を記入してください。</string>
    <string name="alert_rename_list">変更後のリスト名を記入してください。変更前: 「%1$s」→</string>
    <string name="alert_move_to">移動先のリストを選択してください</string>
    <string name="alert_guidance">作りたいリスト名</string>
    <string name="alert_finish">ソフトを終了します。\n終了しても良いですか?</string>
    <string name="toast_error_empty">エラー: リスト名が入力されていません。\n一文字以上何らかの文字を入力して下さい</string>
    <string name="toast_error_duplicate">エラー: 同一名のリストが既に存在しています。 \n別の名称を入力して下さい</string>
    <string name="toast_finish_create_list">完了: リスト「%1$s」を新規に作成しました</string>
    <string name="toast_finish_rename_list">完了: リスト名を「%1$s」→「%2$s」へ変更しました</string>
    <string name="toast_finish_delete_list">完了: リスト「%1$s」を削除しました</string>
    <string name="toast_error_extra">エラー: 予期せぬエラーが発生しました</string>
    <string name="toast_cancel">操作がキャンセルされました</string>
    <string name="alert_delete">を削除しようとしています。\n削除しても良いですか？</string>
    <string name="alert_copy">記入した内容で新たに商品情報を追加します。\n追加しても良いですか？</string>
    <string name="reply_delete">削除する</string>
    <string name="reply_copy">追加する</string>
    <string name="reply_create_list">作成する</string>
    <string name="reply_change">変更する</string>
    <string name="reply_move">移動する</string>
    <string name="reply_finish">終了する</string>
    <string name="cancel">キャンセル</string>
    <string name="spinner_empty">リストが何もありません</string>

    <string-array name="shopping_list">
        <item name="list1">リスト1</item>
        <item name="list2">リスト2</item>
        <item name="list3">リスト3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="messages">
        <item name="text1">これはフラグメント1です</item>
        <item name="text2">これはフラグメント2です</item>
        <item name="text3">これはフラグメント3です</item>
    </string-array>
</resources>
