<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/opNewList"
        android:orderInCategory="1"
        android:title="@string/option_create_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/opEditList"
        android:orderInCategory="2"
        android:title="@string/option_edit_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/opShareList"
        android:orderInCategory="3"
        android:title="@string/option_share_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/opDeleteList"
        android:orderInCategory="4"
        android:title="@string/option_delete_list"
        app:showAsAction="never" />
</menu>