<?xml version="1.0" encoding="utf-8"?>

<!-- > Inspired by android.res.layout.alert_dialog.xml <-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createNewListLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="3dip"
    android:paddingEnd="1dip"
    android:paddingRight="9dip"
    android:paddingBottom="3dip">

    <TextView
        android:id="@+id/tvDialogTitle"
        style="@android:style/TextAppearance.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:minHeight="54dip"
        android:text="@string/attention"
        android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogMessage"
        style="@android:style/TextAppearance.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:text="@string/alert_create_list"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

    <TextView
        android:id="@+id/tvGuidance"
        style="@android:style/TextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="10dp"
        android:text="@string/alert_guidance"
        app:layout_constraintBaseline_toBaselineOf="@+id/etNewListName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNewListName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvGuidance"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage" />

    <Button
        android:id="@+id/btReply"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:text="@string/reply_create_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewListName" />

    <Button
        android:id="@+id/btCancel"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="2dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btReply"
        app:layout_constraintTop_toBottomOf="@+id/etNewListName" />

</android.support.constraint.ConstraintLayout>